--- a/src/components/navBar/navbar.css
+++ b/src/components/navBar/navbar.css
@@ -5,9 +5,17 @@
     justify-content: space-between;
 }
 
+#nav-bar{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000; /* Adjust z-index as needed */
+    /* Additional styles like padding, height, box-shadow, etc. */
+}
+
 /* lightmode and darkmode fonts */
 .darkMode {
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0) 100%);
+    background-image: linear-gradient(to bottom, rgb(0, 0, 0) 0%, rgb(0, 0, 0) 100%);
 }
 
 .lightMode {
