--- a/src/components/jumbotron/jumbotron.css
+++ b/src/components/jumbotron/jumbotron.css
@@ -22,6 +22,7 @@
 }
 
 .right-bar img{
+    margin-top: 7px;
     height: 105%;
     margin-left: 150px;
     filter: drop-shadow(10px 10px 100px rgb(179, 179, 167) );
