--- a/src/components/personalBlog/personalBlog.css
+++ b/src/components/personalBlog/personalBlog.css
@@ -18,3 +18,39 @@
     text-align: center;
     padding-top: 55px;
 }
+
+
+/* responsivness */
+/* Styles for medium-sized screens */
+@media (max-width: 1344px) {
+    .grid-container {
+        grid-template-columns: 1fr;
+    }
+    .grid-item {
+    /* Additional styling for each grid item if needed */
+    padding: 0px;
+    }
+}
+
+/* Styles for smaller screens */
+
+@media (max-width: 500px) {
+    .grid-container {
+        grid-template-columns: 1fr;
+        text-align: center;
+        margin-left: 25px;
+    }
+    .grid-item {
+    /* Additional styling for each grid item if needed */
+        padding: 0px;
+        display: inline-block;
+    }
+    .blog-title{
+        font-size: 40px;
+        font-weight: bold;
+        text-align: left;
+        margin-left: 30px;
+        font-family: lato, 'Arial Narrow Bold', sans-serif;
+        /* padding-top: 55px; */
+    }
+}
