--- a/src/components/personalBlog/personalBlog.css
+++ b/src/components/personalBlog/personalBlog.css
@@ -39,6 +39,7 @@
         grid-template-columns: 1fr;
         text-align: center;
         margin-left: 25px;
+        padding-bottom: 50px;
     }
     .grid-item {
     /* Additional styling for each grid item if needed */
