--- a/src/components/navBar/navbar.css
+++ b/src/components/navBar/navbar.css
@@ -9,6 +9,7 @@
     position: fixed;
     top: 0;
     width: 100%;
+    max-width: 100vw;
     z-index: 1000; /* Adjust z-index as needed */
     /* Additional styles like padding, height, box-shadow, etc. */
 }
@@ -122,7 +123,7 @@ button {
 
 /* responsivness */
 
-@media only screen and (max-width: 2000px){
+@media only screen and (min-width: 1400px){
     .navMenu{
         display: none;
     }
@@ -141,9 +142,10 @@ button {
         display: none;
     }
 
-    .nav-image img{
-        width: 135px;
+    #nav-bar{
+        width: 100vw;
     }
+
 
     .darkModeButton{
         padding-left: 30px;
